--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
         <title>LINCZ Project: Binga fieldwork</title>
     </head>
     <body>
-	<script>
-	  (function () {
-	    const username = prompt("Enter your username:");
-	    const password = prompt("Enter your password:");
+        <script>
+          // Basic login check before loading map
+          const username = prompt("Please enter username:");
+          const password = prompt("Please enter password:");
 
-	    if (username !== "lincz" || password !== "lincz2025") {	
-	      alert("Access denied. Invalid username or password.");
-              window.location.href = "https://www.google.com";
-	    }	
-	  })();
+          if (username !== "lincz" || password !== "lincz2025") {
+            alert("Access denied: Invalid username or password.");
+            // Remove everything from the body so map doesn't load
+            document.body.innerHTML = "<h1>Access denied</h1>";
+            // Stop script execution
+            throw new Error("Invalid login");
+          }
+          // If credentials OK, map will load normally below
         </script>
 
         <div id="map">
@@ -166,240 +169,4 @@
                     </tr>\
                     <tr>\
                         <th scope="row">Province</th>\
-                        <td class="visible-with-data" id="Province">' + (feature.properties['Province'] !== null ? autolinker.link(String(feature.properties['Province']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">District</th>\
-                        <td class="visible-with-data" id="District">' + (feature.properties['District'] !== null ? autolinker.link(String(feature.properties['District']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Ward</th>\
-                        <td class="visible-with-data" id="Ward">' + (feature.properties['Ward'] !== null ? autolinker.link(String(feature.properties['Ward']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-			layer.on('popupopen', function(e) {
-				addClassToPopupIfMedia(content, e.popup);
-			});
-			layer.bindPopup(content, { maxHeight: 400 });
-        }
-
-        function style_BingaWardsboundaries_2_0() {
-            return {
-                pane: 'pane_BingaWardsboundaries_2',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 3.0, 
-                fillOpacity: 0,
-                interactive: true,
-            }
-        }
-        map.createPane('pane_BingaWardsboundaries_2');
-        map.getPane('pane_BingaWardsboundaries_2').style.zIndex = 402;
-        map.getPane('pane_BingaWardsboundaries_2').style['mix-blend-mode'] = 'normal';
-        var layer_BingaWardsboundaries_2 = new L.geoJson(json_BingaWardsboundaries_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_BingaWardsboundaries_2',
-            layerName: 'layer_BingaWardsboundaries_2',
-            pane: 'pane_BingaWardsboundaries_2',
-            onEachFeature: pop_BingaWardsboundaries_2,
-            style: style_BingaWardsboundaries_2_0,
-        });
-        bounds_group.addLayer(layer_BingaWardsboundaries_2);
-        map.addLayer(layer_BingaWardsboundaries_2);
-        function pop_MCCProjectSiteareas_3(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <th scope="row">Name</th>\
-                        <td class="visible-with-data" id="Name">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Total area (m2)</th>\
-                        <td class="visible-with-data" id="Total_area">' + (feature.properties['Total_area'] !== null ? autolinker.link(String(feature.properties['Total_area']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Total area (km2)</th>\
-                        <td class="visible-with-data" id="Total_area_1">' + (feature.properties['Total_area_1'] !== null ? autolinker.link(String(feature.properties['Total_area_1']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Time</th>\
-                        <td class="visible-with-data" id="Time">' + (feature.properties['Time'] !== null ? autolinker.link(String(feature.properties['Time']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Elevation (m)</th>\
-                        <td class="visible-with-data" id="Elevation">' + (feature.properties['Elevation'] !== null ? autolinker.link(String(feature.properties['Elevation']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Ward</th>\
-                        <td class="visible-with-data" id="Ward">' + (feature.properties['Ward'] !== null ? autolinker.link(String(feature.properties['Ward']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">District</th>\
-                        <td class="visible-with-data" id="District">' + (feature.properties['District'] !== null ? autolinker.link(String(feature.properties['District']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-			layer.on('popupopen', function(e) {
-				addClassToPopupIfMedia(content, e.popup);
-			});
-			layer.bindPopup(content, { maxHeight: 400 });
-        }
-
-        var pattern_MCCProjectSiteareas_3_0 = new L.StripePattern({
-            weight: 0.3,
-            spaceWeight: 2.0,
-            color: '#377eb8',
-            opacity: 1.0,
-            spaceOpacity: 0,
-            angle: 315
-        });
-        pattern_MCCProjectSiteareas_3_0.addTo(map);
-        function style_MCCProjectSiteareas_3_0() {
-            return {
-                pane: 'pane_MCCProjectSiteareas_3',
-                stroke: false,
-                fillOpacity: 1,
-                fillPattern: pattern_MCCProjectSiteareas_3_0,
-                interactive: true,
-            }
-        }
-        function style_MCCProjectSiteareas_3_1() {
-            return {
-                pane: 'pane_MCCProjectSiteareas_3',
-                opacity: 1,
-                color: 'rgba(55,126,184,1.0)',
-                dashArray: '',
-                lineCap: 'square',
-                lineJoin: 'bevel',
-                weight: 2.0,
-                fillOpacity: 0,
-                interactive: true,
-            }
-        }
-        map.createPane('pane_MCCProjectSiteareas_3');
-        map.getPane('pane_MCCProjectSiteareas_3').style.zIndex = 403;
-        map.getPane('pane_MCCProjectSiteareas_3').style['mix-blend-mode'] = 'normal';
-        var layer_MCCProjectSiteareas_3 = new L.geoJson.multiStyle(json_MCCProjectSiteareas_3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_MCCProjectSiteareas_3',
-            layerName: 'layer_MCCProjectSiteareas_3',
-            pane: 'pane_MCCProjectSiteareas_3',
-            onEachFeature: pop_MCCProjectSiteareas_3,
-            styles: [style_MCCProjectSiteareas_3_0,style_MCCProjectSiteareas_3_1,]
-        });
-        bounds_group.addLayer(layer_MCCProjectSiteareas_3);
-        map.addLayer(layer_MCCProjectSiteareas_3);
-        function pop_MCCProjectSitepoints_4(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <th scope="row">Elevation (m)</th>\
-                        <td class="visible-with-data" id="Elevation">' + (feature.properties['Elevation'] !== null ? autolinker.link(String(feature.properties['Elevation']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Time</th>\
-                        <td class="visible-with-data" id="Time">' + (feature.properties['Time'] !== null ? autolinker.link(String(feature.properties['Time']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Name</th>\
-                        <td class="visible-with-data" id="Name">' + (feature.properties['Name'] !== null ? autolinker.link(String(feature.properties['Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Ward</th>\
-                        <td class="visible-with-data" id="Ward">' + (feature.properties['Ward'] !== null ? autolinker.link(String(feature.properties['Ward']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">District</th>\
-                        <td class="visible-with-data" id="District">' + (feature.properties['District'] !== null ? autolinker.link(String(feature.properties['District']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-			layer.on('popupopen', function(e) {
-				addClassToPopupIfMedia(content, e.popup);
-			});
-			layer.bindPopup(content, { maxHeight: 400 });
-        }
-
-        function style_MCCProjectSitepoints_4_0() {
-            return {
-                pane: 'pane_MCCProjectSitepoints_4',
-                radius: 3.6,
-                opacity: 1,
-                color: 'rgba(83,83,83,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(238,13,37,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_MCCProjectSitepoints_4');
-        map.getPane('pane_MCCProjectSitepoints_4').style.zIndex = 404;
-        map.getPane('pane_MCCProjectSitepoints_4').style['mix-blend-mode'] = 'normal';
-        var layer_MCCProjectSitepoints_4 = new L.geoJson(json_MCCProjectSitepoints_4, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_MCCProjectSitepoints_4',
-            layerName: 'layer_MCCProjectSitepoints_4',
-            pane: 'pane_MCCProjectSitepoints_4',
-            onEachFeature: pop_MCCProjectSitepoints_4,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_MCCProjectSitepoints_4_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_MCCProjectSitepoints_4);
-        map.addLayer(layer_MCCProjectSitepoints_4);
-        var overlaysTree = [
-            {label: '<img src="legend/MCCProjectSitepoints_4.png" /> MCC Project Site points', layer: layer_MCCProjectSitepoints_4},
-            {label: '<img src="legend/MCCProjectSiteareas_3.png" /> MCC Project Site areas', layer: layer_MCCProjectSiteareas_3},
-            {label: '<img src="legend/BingaWardsboundaries_2.png" /> Binga Wards boundaries', layer: layer_BingaWardsboundaries_2},
-            {label: "Google Labels", layer: layer_GoogleLabels_1},
-            {label: "Google Satellite", layer: layer_GoogleSatellite_0},]
-        var lay = L.control.layers.tree(null, overlaysTree,{
-            //namedToggle: true,
-            //selectorBack: false,
-            //closedSymbol: '&#8862; &#x1f5c0;',
-            //openedSymbol: '&#8863; &#x1f5c1;',
-            //collapseAll: 'Collapse all',
-            //expandAll: 'Expand all',
-            collapsed: true,
-        });
-        lay.addTo(map);
-        setBounds();
-        var i = 0;
-        layer_BingaWardsboundaries_2.eachLayer(function(layer) {
-            var context = {
-                feature: layer.feature,
-                variables: {}
-            };
-            layer.bindTooltip((layer.feature.properties['Ward'] !== null?String('<div style="color: #323232; font-size: 12pt; font-weight: bold; font-family: \'Open Sans\', sans-serif;">' + layer.feature.properties['Ward']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_BingaWardsboundaries_2'});
-            labels.push(layer);
-            totalMarkers += 1;
-              layer.added = true;
-              addLabel(layer, i);
-              i++;
-        });
-        resetLabels([layer_BingaWardsboundaries_2]);
-        map.on("zoomend", function(){
-            resetLabels([layer_BingaWardsboundaries_2]);
-        });
-        map.on("layeradd", function(){
-            resetLabels([layer_BingaWardsboundaries_2]);
-        });
-        map.on("layerremove", function(){
-            resetLabels([layer_BingaWardsboundaries_2]);
-        });
-        </script>
-    </body>
-</html>
+                        <td class="visible-with-data" id="Province">'
